--- a/admin.html
+++ b/admin.html
@@ -16,15 +16,19 @@
             <div class="default-container">
                 <div class="dashboard">
                     <div class="title">
-                        <h1>Welcome to Hangman</h1>
-                        <p>Please select a role.</p>
+                        <h1>Hangman</h1>
+                        <p>You are the Hangman</p>
                     </div>
                     <div class="dashboard-modal">
-                        <form action="">
-                            <label for="Word">Please enter the word that will seal Amibo's fate</label>
-                            <input type="text" name="Word" id="guess-word">
+                        <form>
+                            <label for="word">Please enter the word that will seal Amibo's fate</label>
+                            <input type="text" name="word" id="guess-word"> <img src="" alt="" srcset="">
                         </form>
-                    </div>
+                    </div>  
+                </div>
+                <div id="set-word" class="word-guesser">
+                    <!-- <div class="letter-block" id="visible-letter" ></div> -->
+                    <!-- <input class="letter-block" id="guess-letter" type="text" > -->
                 </div>
             </div>
         </div>
