--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         </div>
                     </a>
 
-                    <a class="role-card" href="#">
+                    <a class="role-card" href="savior.html">
                         <div class="role-icon"><img class="heart-icon" src="./images/savior.png" alt=""></div>
                         <div class="role-card-content">
                             <h2>Savior</h2>
